
Sat Sept 08 02:19:48 2001 <dan@dennedy.org>

    * Updated kernel-video1394.h against current CVS version
    
Mon Sept 24 22:36:12 2001 <dan@dennedy.org>
	* moved src -> libdc1394
	* included examples subdir in autoconf and automake
	* added examples/Makefile.am
	* examples build, but do not automatically install 

Fri Nov 23 15:48:00 2001 <douxchamps@ieee.org>
	* use dc1394 feature-indexed function in
	  dc1394_(get/set)_trigger_on_off

Thu Jan 31 23:38:28 2002 <dan@dennedy.org>
    * dc1394_control.h: added dma_device_member to struct 
      dc1394_cameracapture. This enables support for mutliple
      host adapters as well as the new video1394 devfs names.
    * dc1394_capture.c: _dc1394_dma_basic_setup() uses 
      above struct member to open video1394 device. If the
      char pointer is null, then it defaults to "/dev/video1394"
      for backwards compatibility.
    * kernel-video1394.h: synchronize with video1394.h changes made
      Oct 21 and included in kernel 2.4.17!!

Fri Mar 15 14:43:31 2002 <douxchamps@ieee.org> 
	* dc1394_control.h: updated format7 functions
	* dc1394_format7.c: updated dc1394_query_format7_color_coding_id
	  so that it now returns a valid COLOR_FORMAT7_X value.

Mon Mar 18 14:43:31 2002 <douxchamps@ieee.org> 
	* dc1394_control.c: fixed bug in dc1394_set_feature_on_off: it
	would only set 'on' if the feature was 'off', no matter what
	was the argument.
	* dc1394_control.c: fixed quadlet-per-packet for format_0, mode_4,
	15fps (was 280, should have been 480)

Mon March 26 0:41:50 2002 <dan@dennedy.org>
	* Applied David Moore's <david@startbox.com> patch to avoid getting
      old captures with dma_multi_capture.
	* Applied John Stanley's <stanley@peak.org> patch to use multiple
      cameras on mutliple ports (hosts).
      NOTE: the new dc1394_destroy_handle() in dc1394_control.h
      NOTE: the dma device file defaults to the video1394 devfs default
      naming convention when not specified: /dev/video1394/<port>